[gd_scene load_steps=5 format=3 uid="uid://daqgu145iv648"]

[ext_resource type="Script" uid="uid://dkh3bkfl4wmrm" path="res://src/scripts/UI/level_menu.gd" id="1_2hp7e"]
[ext_resource type="AudioStream" uid="uid://dt84r8oc8jgnl" path="res://assets/sounds/music/28 - Yadu Rajiv - First Steps.ogg" id="2_on6ia"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_rwiaa"]
load_path = "res://.godot/imported/Fondo.png-7581cd83e20d3a8c8e50f8b680939e91.ctex"

[sub_resource type="SystemFont" id="SystemFont_ba7d3"]
font_names = PackedStringArray("Century Gothic")
font_weight = 600
subpixel_positioning = 0
oversampling = 10.0

[node name="Level_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2hp7e")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CompressedTexture2D_rwiaa")
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="nivel_1" type="Button" parent="TextureRect/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_fonts/font = SubResource("SystemFont_ba7d3")
theme_override_font_sizes/font_size = 30
text = "nivel 1"

[node name="nivel_2" type="Button" parent="TextureRect/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_fonts/font = SubResource("SystemFont_ba7d3")
theme_override_font_sizes/font_size = 30
text = "nivel 2"

[node name="nivel_3" type="Button" parent="TextureRect/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_fonts/font = SubResource("SystemFont_ba7d3")
theme_override_font_sizes/font_size = 30
text = "nivel 3
"

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_constants/separation = 32

[node name="SalirBt" type="Button" parent="TextureRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_fonts/font = SubResource("SystemFont_ba7d3")
theme_override_font_sizes/font_size = 30
text = "atras"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_on6ia")
autoplay = true
parameters/looping = true

[connection signal="pressed" from="TextureRect/MarginContainer/HBoxContainer/nivel_1" to="." method="_on_nivel_1_pressed"]
[connection signal="pressed" from="TextureRect/MarginContainer/HBoxContainer/nivel_2" to="." method="_on_nivel_2_pressed"]
[connection signal="pressed" from="TextureRect/MarginContainer/HBoxContainer/nivel_3" to="." method="_on_nivel_3_pressed"]
[connection signal="pressed" from="TextureRect/MarginContainer/VBoxContainer/SalirBt" to="." method="_on_salir_bt_pressed"]
